# araliya-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TODO-LOG.md  a  app.py  araliya-bot-combined-docs.md  build.rs  docker-compose.yml  gmail_oauth_test.py  install.sh  requirements.txt  uninstall.sh
config/: default.toml  docker.toml  docs_agent.toml  docs_instr.toml  dummy.toml  full.toml  llm-test.toml  minimal.toml  news.toml  newsroom.toml  qwen_docs.toml  runtime_cmd.toml  test-gdelt.toml  uniweb.toml
crates/araliya-agents/: Cargo.toml
crates/araliya-agents/src/: agentic_chat.rs  docs.rs  docs_import.rs  gdelt_news.rs  lib.rs  news.rs  news_aggregator.rs  newsroom.rs  runtime_cmd.rs  sqlite_tool.rs  test_rssnews.rs
crates/araliya-agents/src/chat/: core.rs  mod.rs  session_chat.rs
crates/araliya-agents/src/core/: agentic.rs  mod.rs  prompt.rs
crates/araliya-agents/src/uniweb/: mod.rs
crates/araliya-agents/src/webbuilder/: init_home.rs  loop_.rs  mod.rs  tools.rs
crates/araliya-bot/: Cargo.toml  build.rs
crates/araliya-bot/src/: db.rs  identity.rs  lib.rs  main.rs  obs_layer.rs
crates/araliya-bot/src/bootstrap/: identity.rs  logger.rs  mod.rs
crates/araliya-bot/src/core/: error.rs  mod.rs
crates/araliya-bot/src/core/config/: load.rs  mod.rs  raw.rs  types.rs
crates/araliya-bot/src/llm/: mod.rs
crates/araliya-bot/src/llm/providers/: dummy.rs  mod.rs  openai_compatible.rs  qwen.rs
crates/araliya-bot/src/setup/: answers.rs  doctor.rs  mod.rs  writer.rs
crates/araliya-bot/src/subsystems/: memory_bus.rs  mod.rs  runtime.rs
crates/araliya-bot/src/subsystems/agents/: agentic_chat.rs  docs.rs  docs_agent.rs  docs_import.rs  gdelt_news.rs  gmail.rs  mod.rs  news.rs  news_aggregator.rs  newsroom.rs  runtime_cmd.rs  sqlite_tool.rs  test_rssnews.rs
crates/araliya-bot/src/subsystems/agents/chat/: basic_chat.rs  core.rs  session_chat.rs
crates/araliya-bot/src/subsystems/agents/core/: agentic.rs  mod.rs  prompt.rs
crates/araliya-bot/src/subsystems/agents/uniweb/: mod.rs
crates/araliya-bot/src/subsystems/agents/webbuilder/: loop_.rs  mod.rs  tools.rs
crates/araliya-bot/src/subsystems/comms/: mod.rs  pty.rs  state.rs  telegram.rs
crates/araliya-bot/src/subsystems/comms/axum_channel/: api.rs  mod.rs  preview.rs  ui.rs
crates/araliya-bot/src/subsystems/comms/http/: api.rs  mod.rs  ui.rs
crates/araliya-bot/src/subsystems/cron/: mod.rs  service.rs
crates/araliya-bot/src/subsystems/llm/: mod.rs
crates/araliya-bot/src/subsystems/management/: mod.rs
crates/araliya-bot/src/subsystems/memory/: collections.rs  docstore_manager.rs  handle.rs  mod.rs  rw.rs  store.rs  types.rs
crates/araliya-bot/src/subsystems/memory/stores/: agent.rs  basic_session.rs  docstore.rs  kg_docstore.rs  mod.rs  sqlite_core.rs  sqlite_store.rs  tmp.rs
crates/araliya-bot/src/subsystems/runtimes/: mod.rs  types.rs
crates/araliya-bot/src/subsystems/tools/: gdelt_bigquery.rs  gmail.rs  mod.rs  newsmail_aggregator.rs
crates/araliya-bot/src/subsystems/ui/: mod.rs  svui.rs
crates/araliya-bot/src/supervisor/: bus.rs  component_info.rs  control.rs  dispatch.rs  health.rs  mod.rs
crates/araliya-bot/src/supervisor/adapters/: mod.rs  stdio.rs  uds.rs
crates/araliya-bot/tests/: test_docstore.rs  test_kg_docstore.rs  test_news_agg_pipeline.rs  test_prompts.rs
crates/araliya-bot/tests/scripts/: inspect_agg_pipeline.py
crates/araliya-comms/: Cargo.toml
crates/araliya-comms/src/: lib.rs  pty.rs  state.rs  telegram.rs
crates/araliya-comms/src/axum_channel/: api.rs  mod.rs  preview.rs  ui.rs
crates/araliya-comms/src/http/: api.rs  mod.rs  ui.rs
crates/araliya-core/: Cargo.toml
crates/araliya-core/src/: identity.rs  lib.rs  logger.rs  runtime.rs  ui.rs  user_identity.rs
crates/araliya-core/src/bus/: component.rs  dispatch.rs  handle.rs  health.rs  message.rs  mod.rs
crates/araliya-core/src/config/: agent_def.rs  load.rs  mod.rs  raw.rs  types.rs
crates/araliya-core/src/obs/: bus.rs  event.rs  mod.rs
crates/araliya-core/src/types/: llm.rs  mod.rs
crates/araliya-cron/: Cargo.toml
crates/araliya-cron/src/: dispatcher.rs  lib.rs  service.rs
crates/araliya-llm/: Cargo.toml
crates/araliya-llm/src/: lib.rs
crates/araliya-llm/src/providers/: chat_completions.rs  dummy.rs  mod.rs  openai_compatible.rs  openai_responses.rs  qwen.rs  responses.rs
crates/araliya-memory/: Cargo.toml
crates/araliya-memory/src/: bus.rs  collections.rs  docstore_manager.rs  handle.rs  lib.rs  rw.rs  store.rs  types.rs
crates/araliya-memory/src/stores/: agent.rs  basic_session.rs  docstore.rs  kg_docstore.rs  mod.rs  sqlite_core.rs  sqlite_store.rs  tmp.rs
crates/araliya-runtimes/: Cargo.toml
crates/araliya-runtimes/src/: dispatcher.rs  lib.rs
crates/araliya-supervisor/: Cargo.toml
crates/araliya-supervisor/src/: lib.rs  management.rs  run.rs
crates/araliya-supervisor/src/adapters/: mod.rs  stdio.rs  uds.rs
crates/araliya-tools/: Cargo.toml
crates/araliya-tools/src/: dispatcher.rs  gdelt_bigquery.rs  gmail.rs  lib.rs  newsmail_aggregator.rs  rss_fetch.rs
crates/araliya-ui/: Cargo.toml  README.md
crates/araliya-ui/src/: lib.rs  svui.rs
crates/araliya-ui/src/beacon/: ipc.rs  mod.rs
crates/araliya-ui/src/gpui/: api.rs  canvas_scene.rs  components.rs  mod.rs  state.rs
hf_space/: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  HYBRID_SETUP.md  RAG_README.md  README.md  pyproject.toml  pytest.ini  requirements.txt
hf_space/app/: __init__.py  config.py  main.py
hf_space/app/api/: routes.py
hf_space/app/data/: sample_posts.py
hf_space/app/models/: __init__.py  chat.py
hf_space/app/services/: __init__.py  gpu_accelerated.py  openai_service.py  rag_service.py  session_manager.py
hf_space/app/utils/: __init__.py  error_handlers.py
hf_space/scripts/: dev_setup.sh  local_test.sh  run_server.sh  run_tests.sh  test_api_rag.py  test_cpu_rag.py  test_deployment.py  test_import_fix.py  test_rag.py  update_requirements.sh
hf_space/tests/: __init__.py  conftest.py  test_api_routes.py  test_models.py  test_services.py
(+251 files in other folders)
