[package]
name = "araliya-bot"
version = "0.0.5"
edition = "2024"
description = "Modular agentic assistant — supervisor bootstrap"
default-run = "araliya-bot"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "io-util", "io-std", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
toml = "0.8"
ed25519-dalek = { version = "2", default-features = false, features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "2"
dotenvy = "0.15"
teloxide = { version = "0.13", optional = true, default-features = false, features = ["macros", "rustls"] }
axum = { version = "0.8", optional = true, default-features = false, features = ["http1", "tokio", "json"] }

[features]
default = [
    "subsystem-agents",
    "subsystem-llm",
    "subsystem-comms",
    "subsystem-memory",
    "subsystem-ui",
    "subsystem-tools",
    "plugin-echo",
    "plugin-basic-chat",
    "plugin-chat",
    "plugin-gmail-tool",
    "plugin-gmail-agent",
    "channel-pty",
    "channel-telegram",
    "channel-axum",
    "ui-svui"
]


# Subsystems
subsystem-agents = []
subsystem-llm = []
subsystem-comms = []
subsystem-memory = []
subsystem-ui = []
subsystem-tools = []

# Agent Plugins
plugin-echo = ["subsystem-agents"]
plugin-basic-chat = ["subsystem-agents", "subsystem-llm"]
plugin-chat = ["subsystem-agents", "subsystem-llm", "subsystem-memory"]
plugin-gmail-tool = ["subsystem-tools"]
plugin-gmail-agent = ["subsystem-agents", "subsystem-tools", "plugin-gmail-tool"]

# Comms Channels
channel-pty = ["subsystem-comms"]
channel-telegram = ["subsystem-comms", "dep:teloxide"]
channel-http = ["subsystem-comms"]
channel-axum = ["subsystem-comms", "dep:axum"]

# UI Backends
ui-svui = ["subsystem-ui"]

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
