[workspace]
resolver = "2"
members = [
    "crates/araliya-core",
    "crates/araliya-supervisor",
    "crates/araliya-llm",
    "crates/araliya-comms",
    "crates/araliya-memory",
    "crates/araliya-agents",
    "crates/araliya-tools",
    "crates/araliya-cron",
    "crates/araliya-runtimes",
    "crates/araliya-ui",
    "crates/araliya-bot",
]
default-members = ["crates/araliya-bot"]

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
