[package]
name = "araliya-bot"
version = "0.2.6"
edition = "2024"
description = "Modular agentic assistant — supervisor bootstrap"
license = "GPL-3.0-only"
default-run = "araliya-bot"

[dependencies]
araliya-core = { path = "../araliya-core" }
araliya-supervisor = { path = "../araliya-supervisor" }
araliya-llm = { path = "../araliya-llm" }
araliya-comms = { path = "../araliya-comms" }
araliya-memory = { path = "../araliya-memory" }
araliya-tools = { path = "../araliya-tools", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "io-util", "io-std", "sync", "time", "net", "fs", "process"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "stream"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
toml = "0.8"
ed25519-dalek = { version = "2", default-features = false, features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "2"
dotenvy = "0.15"
teloxide = { version = "0.13", optional = true, default-features = false, features = ["macros", "rustls"] }
axum = { version = "0.8", optional = true, default-features = false, features = ["http1", "tokio", "json"] }
gpui = { version = "0.2.2", optional = true }
gpui-component = { version = "0.5.1", optional = true }
winit = { version = "0.30", optional = true }
vello = { version = "0.4", optional = true }
wgpu = { version = "23", optional = true }
pollster = { version = "0.3", optional = true }
chrono = "0.4"
rusqlite = { version = "0.37", optional = true, features = ["bundled"] }
text-splitter = { version = "0.17", optional = true, features = ["markdown"] }
htmd = "0.5"

[features]
default = [
    "subsystem-agents",
    "subsystem-memory",
    "subsystem-llm",
    "subsystem-comms",
    "subsystem-ui",
    "subsystem-tools",
    "subsystem-cron",
    "plugin-echo",
    "plugin-basic-chat",
    "plugin-chat",
    "plugin-agentic-chat",
    "plugin-docs",
    "plugin-uniweb",
    "plugin-docs-agent",
    "plugin-runtime-cmd",
    "plugin-webbuilder",
    "plugin-newsroom-agent",
    "plugin-test-rssnews",
    "subsystem-runtimes",
    "channel-pty",
    "channel-axum",
    "ui-svui",
]
full    = [
    "default",
    "plugin-gmail-tool",
    "plugin-gmail-agent",
    "plugin-news-agent",
    "plugin-gdelt-tool",
    "plugin-gdelt-news-agent",
    "plugin-newsroom-agent",
    "plugin-news-aggregator",
    "channel-telegram",
    "cli",
    "gmail-app",
    "plugin-docs",
    "ikgdocstore",
    ]
minimal = ["subsystem-agents", "subsystem-llm", "channel-pty", "plugin-basic-chat"]

# Binaries
cli = []
gmail-app = []


# Subsystems
subsystem-agents = ["subsystem-memory"]
subsystem-memory = []
isqlite = ["dep:rusqlite", "araliya-memory/isqlite"]
idocstore = ["isqlite", "dep:text-splitter", "araliya-memory/idocstore"]
ikgdocstore = ["isqlite", "dep:text-splitter", "araliya-memory/ikgdocstore"]
subsystem-llm = []
subsystem-comms = []
subsystem-ui = ["araliya-comms/subsystem-ui"]
subsystem-tools = ["dep:araliya-tools", "araliya-tools/subsystem-tools"]
subsystem-cron = []
subsystem-runtimes = []

# Agent Plugins
plugin-echo = ["subsystem-agents"]
plugin-docs = ["subsystem-agents", "idocstore"]
plugin-docs-kg = ["subsystem-agents", "ikgdocstore"]
plugin-basic-chat = ["subsystem-agents", "subsystem-llm"]
plugin-chat = ["subsystem-agents", "subsystem-memory", "subsystem-llm"]
plugin-agentic-chat = ["subsystem-agents", "subsystem-memory", "subsystem-llm"]
plugin-gmail-tool = ["subsystem-tools", "araliya-tools/plugin-gmail-tool"]
plugin-gmail-agent = ["subsystem-agents", "subsystem-tools", "plugin-gmail-tool"]
plugin-news-agent = ["subsystem-agents", "subsystem-tools", "plugin-gmail-tool"]
plugin-gdelt-tool = ["subsystem-tools", "araliya-tools/plugin-gdelt-tool"]
plugin-gdelt-news-agent = ["plugin-gdelt-tool", "subsystem-agents"]
plugin-newsroom-agent = ["plugin-gdelt-tool", "subsystem-agents", "isqlite"]
plugin-news-aggregator = ["plugin-newsroom-agent", "ikgdocstore"]
plugin-uniweb = ["subsystem-agents", "subsystem-memory", "subsystem-llm"]
plugin-docs-agent = ["subsystem-agents", "plugin-docs"]
plugin-runtime-cmd = ["subsystem-agents", "subsystem-runtimes"]
plugin-webbuilder = ["subsystem-agents", "subsystem-runtimes", "subsystem-memory", "subsystem-llm", "araliya-comms/plugin-webbuilder"]
plugin-rss-fetch-tool = ["subsystem-tools", "araliya-tools/plugin-rss-fetch-tool"]
plugin-test-rssnews = ["subsystem-agents", "subsystem-llm", "subsystem-tools", "plugin-rss-fetch-tool"]

# Comms Channels
channel-pty = ["subsystem-comms", "araliya-comms/channel-pty"]
channel-telegram = ["subsystem-comms", "dep:teloxide", "araliya-comms/channel-telegram"]
channel-http = ["subsystem-comms", "araliya-comms/channel-http"]
channel-axum = ["subsystem-comms", "dep:axum", "araliya-comms/channel-axum"]

# UI Backends
ui-svui = ["subsystem-ui"]
ui-gpui = ["dep:gpui", "dep:gpui-component"]
ui-beacon = ["dep:winit", "dep:vello", "dep:wgpu", "dep:pollster"]

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["test-util"] }
htmd = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = "1"

[lib]
name = "araliya_bot"
path = "src/lib.rs"

[[bin]]
name = "araliya-bot"
path = "src/main.rs"

[[bin]]
name = "araliya-ctl"
path = "src/bin/araliya-ctl.rs"
required-features = ["cli"]

[[bin]]
name = "gmail_read_one"
path = "src/bin/gmail_read_one.rs"
required-features = ["gmail-app"]

[[bin]]
name = "araliya-gpui"
path = "src/bin/araliya-gpui/main.rs"
required-features = ["ui-gpui"]

[[bin]]
name = "araliya-beacon"
path = "src/bin/araliya-beacon/main.rs"
required-features = ["ui-beacon"]

[[test]]
name = "test_news_agg_pipeline"
path = "tests/test_news_agg_pipeline.rs"
required-features = ["plugin-news-aggregator"]

[[test]]
name = "test_docstore"
path = "tests/test_docstore.rs"
required-features = ["idocstore", "subsystem-memory"]

[[test]]
name = "test_kg_docstore"
path = "tests/test_kg_docstore.rs"
required-features = ["ikgdocstore", "subsystem-memory"]
