[package]
name = "araliya-bot"
version = "0.2.0-alpha"
edition = "2024"
description = "Modular agentic assistant — supervisor bootstrap"
license = "GPL-3.0-only"
default-run = "araliya-bot"

[dependencies]
araliya-core = { path = "../araliya-core" }
araliya-supervisor = { path = "../araliya-supervisor" }
araliya-llm = { path = "../araliya-llm" }
araliya-comms = { path = "../araliya-comms" }
araliya-memory = { path = "../araliya-memory" }
araliya-agents = { path = "../araliya-agents", optional = true }
araliya-tools = { path = "../araliya-tools", optional = true }
araliya-cron = { path = "../araliya-cron", optional = true }
araliya-runtimes = { path = "../araliya-runtimes", optional = true }
araliya-ui = { path = "../araliya-ui", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "io-util", "io-std", "sync", "time", "net", "fs", "process"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "stream"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
sha2 = "0.10"
base64 = "0.22"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
rusqlite = { version = "0.37", optional = true, features = ["bundled"] }
dialoguer  = { version = "0.11", optional = true }
console    = { version = "0.15", optional = true }
indicatif  = { version = "0.17", optional = true }
anyhow     = { version = "1", optional = true }
toml       = { version = "0.8", optional = true }
# reqwest already declared above as unconditional dep; blocking feature added via setup feature

[features]
default = [
    "setup",
    "subsystem-agents",
    "subsystem-memory",
    "subsystem-llm",
    "subsystem-comms",
    "subsystem-ui",
    "subsystem-tools",
    "subsystem-cron",
    "plugin-echo",
    "plugin-basic-chat",
    "plugin-chat",
    "plugin-agentic-chat",
    "plugin-docs",
    "plugin-uniweb",
    "plugin-docs-agent",
    "plugin-runtime-cmd",
    "plugin-webbuilder",
    "plugin-homebuilder",
    "plugin-newsroom-agent",
    "plugin-test-rssnews",
    "subsystem-runtimes",
    "channel-pty",
    "channel-axum",
    "ui-svui",
]
full    = [
    "default",
    "plugin-gmail-tool",
    "plugin-gmail-agent",
    "plugin-news-agent",
    "plugin-gdelt-tool",
    "plugin-gdelt-news-agent",
    "plugin-newsroom-agent",
    "plugin-news-aggregator",
    "channel-telegram",
    "cli",
    "gmail-app",
    "plugin-docs",
    "ikgdocstore",
    ]
minimal = ["subsystem-agents", "subsystem-llm", "channel-pty", "plugin-basic-chat"]

# Setup wizard + doctor
setup = ["dep:dialoguer", "dep:console", "dep:indicatif", "dep:anyhow", "dep:toml"]

# Binaries
cli = []
gmail-app = []


# Subsystems
subsystem-agents = ["dep:araliya-agents", "araliya-agents/subsystem-agents"]
subsystem-memory = []
isqlite = ["dep:rusqlite", "araliya-memory/isqlite"]
idocstore = ["isqlite", "araliya-memory/idocstore"]
ikgdocstore = ["isqlite", "araliya-memory/ikgdocstore"]
subsystem-llm = []
subsystem-comms = []
subsystem-ui = ["dep:araliya-ui", "araliya-comms/subsystem-ui"]
subsystem-tools = ["dep:araliya-tools", "araliya-tools/subsystem-tools"]
subsystem-cron = ["dep:araliya-cron", "araliya-cron/subsystem-cron"]
subsystem-runtimes = ["dep:araliya-runtimes", "araliya-runtimes/subsystem-runtimes"]

# Agent Plugins
plugin-echo = ["subsystem-agents", "araliya-agents/plugin-echo"]
plugin-docs = ["subsystem-agents", "idocstore", "araliya-agents/plugin-docs"]
plugin-docs-kg = ["subsystem-agents", "ikgdocstore", "araliya-agents/plugin-docs-kg"]
plugin-basic-chat = ["subsystem-agents", "subsystem-llm", "araliya-agents/plugin-basic-chat"]
plugin-chat = ["subsystem-agents", "subsystem-memory", "subsystem-llm", "araliya-agents/plugin-chat"]
plugin-agentic-chat = ["subsystem-agents", "subsystem-memory", "subsystem-llm", "araliya-agents/plugin-agentic-chat"]
plugin-gmail-tool = ["subsystem-tools", "araliya-tools/plugin-gmail-tool"]
plugin-gmail-agent = ["subsystem-agents", "subsystem-tools", "plugin-gmail-tool", "araliya-agents/plugin-gmail-agent"]
plugin-news-agent = ["subsystem-agents", "subsystem-tools", "plugin-gmail-tool", "araliya-agents/plugin-news-agent"]
plugin-gdelt-tool = ["subsystem-tools", "araliya-tools/plugin-gdelt-tool"]
plugin-gdelt-news-agent = ["plugin-gdelt-tool", "subsystem-agents", "araliya-agents/plugin-gdelt-news-agent"]
plugin-newsroom-agent = ["plugin-gdelt-tool", "subsystem-agents", "isqlite", "araliya-agents/plugin-newsroom-agent"]
plugin-news-aggregator = ["plugin-newsroom-agent", "ikgdocstore", "araliya-agents/plugin-news-aggregator"]
plugin-uniweb = ["subsystem-agents", "subsystem-memory", "subsystem-llm", "araliya-agents/plugin-uniweb"]
plugin-docs-agent = ["subsystem-agents", "plugin-docs", "araliya-agents/plugin-docs-agent"]
plugin-runtime-cmd = ["subsystem-agents", "subsystem-runtimes", "araliya-agents/plugin-runtime-cmd"]
plugin-webbuilder = ["subsystem-agents", "subsystem-runtimes", "subsystem-memory", "subsystem-llm", "araliya-comms/plugin-webbuilder", "araliya-agents/plugin-webbuilder"]
plugin-homebuilder = ["subsystem-agents", "subsystem-runtimes", "subsystem-memory", "subsystem-llm", "araliya-comms/plugin-homebuilder", "araliya-agents/plugin-homebuilder"]
plugin-rss-fetch-tool = ["subsystem-tools", "araliya-tools/plugin-rss-fetch-tool"]
plugin-test-rssnews = ["subsystem-agents", "subsystem-llm", "subsystem-tools", "plugin-rss-fetch-tool", "araliya-agents/plugin-test-rssnews"]

# Comms Channels
channel-pty = ["subsystem-comms", "araliya-comms/channel-pty"]
channel-telegram = ["subsystem-comms", "araliya-comms/channel-telegram"]
channel-http = ["subsystem-comms", "araliya-comms/channel-http"]
channel-axum = ["subsystem-comms", "araliya-comms/channel-axum"]

# UI Backends
ui-svui = ["subsystem-ui", "araliya-ui/ui-svui"]
ui-gpui = ["dep:araliya-ui", "araliya-ui/ui-gpui"]
ui-beacon = ["dep:araliya-ui", "araliya-ui/ui-beacon"]

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["test-util"] }
htmd = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = "1"

[lib]
name = "araliya_bot"
path = "src/lib.rs"

[[bin]]
name = "araliya-bot"
path = "src/main.rs"

[[bin]]
name = "araliya-ctl"
path = "src/bin/araliya-ctl.rs"
required-features = ["cli"]

[[bin]]
name = "gmail_read_one"
path = "src/bin/gmail_read_one.rs"
required-features = ["gmail-app"]

[[bin]]
name = "araliya-gpui"
path = "src/bin/araliya-gpui/main.rs"
required-features = ["ui-gpui"]

[[bin]]
name = "araliya-beacon"
path = "src/bin/araliya-beacon/main.rs"
required-features = ["ui-beacon"]

[[test]]
name = "test_news_agg_pipeline"
path = "tests/test_news_agg_pipeline.rs"
required-features = ["plugin-news-aggregator"]

[[test]]
name = "test_docstore"
path = "tests/test_docstore.rs"
required-features = ["idocstore", "subsystem-memory"]

[[test]]
name = "test_kg_docstore"
path = "tests/test_kg_docstore.rs"
required-features = ["ikgdocstore", "subsystem-memory"]
