[package]
name = "araliya-llm"
version = "0.2.0-alpha"
edition = "2021"
license = "GPL-3.0-only"
description = "LLM provider abstraction for araliya-bot"

[dependencies]
araliya-core = { path = "../araliya-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
