[package]
name = "araliya-memory"
version = "0.2.1-alpha"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
araliya-core = { path = "../araliya-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "v7"] }

# Feature-gated
rusqlite = { version = "0.37", optional = true, features = ["bundled"] }
text-splitter = { version = "0.17", optional = true, features = ["markdown"] }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
chrono = { version = "0.4", optional = true }

[features]
isqlite    = ["dep:rusqlite", "dep:sha2", "dep:hex", "dep:chrono"]
idocstore  = ["isqlite", "dep:text-splitter"]
ikgdocstore = ["isqlite", "dep:text-splitter"]

[dev-dependencies]
tempfile = "3"
