[package]
name = "araliya-runtimes"
version = "0.2.1-alpha"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
araliya-core = { path = "../araliya-core" }
tokio = { version = "1", features = ["rt", "sync", "process", "time", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
subsystem-runtimes = []
