[package]
name = "araliya-supervisor"
version = "0.2.1-alpha"
edition = "2021"
license = "GPL-3.0-only"
description = "Supervisor runtime orchestrator for araliya-bot"

[dependencies]
araliya-core = { path = "../araliya-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "io-util", "io-std", "macros", "net", "rt", "time", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
