[package]
name = "araliya-tools"
version = "0.2.0-alpha"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
araliya-core = { path = "../araliya-core" }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = "0.4"
tracing = "0.1"

# Optional — activated by feature flags
jsonwebtoken = { version = "9", optional = true }
feed-rs = { version = "2", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[features]
default = []
subsystem-tools = []
plugin-gmail-tool = ["subsystem-tools", "dep:sha2", "dep:base64", "dep:uuid"]
plugin-gdelt-tool = ["subsystem-tools", "dep:jsonwebtoken"]
plugin-rss-fetch-tool = ["subsystem-tools", "dep:feed-rs"]
